(2001/07/06 - broeker) Code dealing with database creation ripped out of
		       main.c and moved to a new module build.c. New
		       header file build.h to go with it.
(2001/07/05 - cohrs)   LEX and SUNOS fix for scanner.
(2001/07/05 - broeker) Put in lots of 'static' keywords, added prototypes.
(2001/07/05 - broeker) Renamed pclose() function to mypclose(), in order not to
	               cause a conflict with system function having the same
		       name.
(2001/07/05 - broeker) Centralisation of BSDism configuration stuff. Removal of
	               some remaining external prototypes from .c files, where
		       they should never be. Added multiple inclusion guards
		       to all headers. Ask for feature instead of testing a 
		       list of platform-#defines, wherever possible.
(2001/07/05 - broeker) Some post-last-minute DOS/DJGPP build fixes.
(2001/07/03 - petrs)   Updated the version strings to 16.0a.
(2001/07/02 - petrs)   Updated the contrib/README to include xcscope.
(2001/07/02 - petrs)   15.3 version name, man page update, README update.
                       Make dist includes webcscope directory.
(2001/06/29 - ragho)   webcscope added to contrib 
(2001/06/29 - broeker) Re-formatted README, and added a tip working around 
	               buggy libcurses on HP-UX 10.
(2001/06/29 - broeker) Oversight in packages/MSDOS/djmake.bat fixed.	
(2001/06/28 - darrylo) Updated xcscope.el to include GNU Emacs fixes and
		       fuzzy pattern matching.  Updated docs in xcscope.el.
(2001/06/28 - broeker) Added files in packages/MSDOS that help compiling
		       cscope on MSDOS using the DJGPP compiler.
(2001/06/28 - broeker) Add test for existence of <sys/termios.h> header,
		       to protect platforms that don't have it.
(2001/06/27 - broeker) Yet another set of automake/autoconf changes. 
                       Regenerated auto* files checked in, too. We are
		       'make distcheck' ready, now. Added 'ylwrap' to
		       CVS.